[package]
name = "rsomics-fasta-digest"
version = "0.1.0"
description = "In-silico protein digestion — trypsin/LysC/other enzymes, missed cleavages, peptide mass filter"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "rsomics-fasta-digest"
path = "src/main.rs"

[lib]
name = "rsomics_fasta_digest"
path = "src/lib.rs"

[dependencies]
rsomics-common = { path = "../../../foundation/rsomics-common", version = "0.6" }
rsomics-help = { path = "../../../foundation/rsomics-help", version = "0.3" }
clap.workspace = true
needletail = { version = "0.7", default-features = false }

[lints]
workspace = true
