[package]
name = "rsomics-fasta-digest"
version = "0.1.0"
description = "In-silico protein digestion — trypsin/LysC/other enzymes, missed cleavages, peptide mass filter"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-fasta-digest"
path = "src/main.rs"

[lib]
name = "rsomics_fasta_digest"
path = "src/lib.rs"

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }
needletail = { version = "0.7", default-features = false }

